fix: update 404 page title and messages to English; simplify redirection logic

--- a/404.html
+++ b/404.html
@@ -4,18 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Перенаправлення...</title>
+    <title>Redirection...</title>
     <script>
-      // Отримуємо поточний шлях, запити та hash
       var path =
         window.location.pathname +
         window.location.search +
         window.location.hash;
-      // Перенаправляємо на index.html з hash-маршрутом
-      window.location.replace("/#" + path);
+      window.location.replace(path);
     </script>
   </head>
   <body>
-    <p>Перенаправлення...</p>
+    <p>Redirection...</p>
   </body>
 </html>
