fix: simplify redirection logic in 404 page by commenting out unused code

--- a/404.html
+++ b/404.html
@@ -6,11 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirection...</title>
     <script>
-      var path =
-        window.location.pathname +
-        window.location.search +
-        window.location.hash;
-      window.location.replace("/#" + path);
+      // var path =
+      //   window.location.pathname +
+      //   window.location.search +
+      //   window.location.hash;
+      // window.location.replace("/#" + path);
+
+      if (!window.location.hash) {
+        var path = window.location.pathname + window.location.search;
+        // Якщо шлях кореневий, не додаємо його
+        window.location.replace("/#" + (path === "/" ? "" : path));
+      }
     </script>
   </head>
   <body>
