--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
         window.location.pathname +
         window.location.search +
         window.location.hash;
-      window.location.replace("/" + path);
+      window.location.replace("#/" + path);
 
       // if (!window.location.hash) {
       //   var path = window.location.pathname + window.location.search;
