fix: update language attribute to English and simplify redirection script in 404 page

--- a/404.html
+++ b/404.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redirection...</title>
     <script>
-      var path =
-        window.location.pathname +
-        window.location.search +
-        window.location.hash;
       window.location.replace("/");
-
-      // if (!window.location.hash) {
-      //   var path = window.location.pathname + window.location.search;
-      //   // Якщо шлях кореневий, не додаємо його
-      //   window.location.replace("/#" + (path === "/" ? "" : path));
-      // }
     </script>
   </head>
   <body>
